# airflow-batch-elt

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
dags/: gcs_ingestion_dag.py
docker/: Dockerfile  docker-compose.yml
include/dbt/: .user.yml  profiles.yml
include/dbt/orders_pipeline/: dbt_project.yml
include/dbt/orders_pipeline/models/marts/: fct_orders.sql  schema.yml
include/dbt/orders_pipeline/models/staging/: schema.yml  stg_orders.sql
include/dbt/orders_pipeline/tests/: assert_no_negative_revenue.sql
include/gcs/: ingestion.py
include/gcs/schemas/: orders.json
include/great_expectations/: create_expectations.py
include/great_expectations/gx/: great_expectations.yml
include/great_expectations/gx/expectations/: .ge_store_backend_id  orders_suite.json
include/sample_data/: orders.csv
k8s/helm/: values.yaml
k8s/manifests/: postgres.yaml  service-account.yaml
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/unit/: test_dag.py
